upgrading the spec to v2.1
git-svn-id: https://svn.apache.org/repos/asf/geronimo/specs/trunk/geronimo-jaxrs_2.1_spec@1818654 13f79535-47bb-0310-9956-ffa450edef68